k8s/deployment-old.yaml
# Copyright 2017 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: mygrpc-server
spec:
  ports:
  # - port: 80
  #   targetPort: 9000
  #   protocol: TCP
  #   name: esp
  - port: 50051
    targetPort: 50051
    protocol: TCP
    name: direct
  - port: 443
    targetPort: 8443
    protocol: TCP
    name: https

  selector:
    app: mygrpc-server
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mygrpc-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mygrpc-server
  template:
    metadata:
      labels:
        app: mygrpc-server
    spec:
      volumes:
        - name: nginx-ssl
          secret:
            secretName: nginx-ssl
      containers:
      - name: esp
        image: gcr.io/endpoints-release/endpoints-runtime:1
        args: [
          # "--http2_port=9000",
          "--ssl_port=8443",
          "--enable_grpc_backend_ssl",
          "--grpc_backend_ssl_root_certs_file=/etc/nginx/ssl/nginx.crt",
          "--backend=grpc://ssc.tada.com.au:50051",
          "--service=hellogrpc.endpoints.argon-edge-251405.cloud.goog",
          "--rollout_strategy=managed",
        ]
        ports:
          # - containerPort: 9000
          - containerPort: 8443
        volumeMounts:
        - mountPath: /etc/nginx/ssl
          name: nginx-ssl
          readOnly: true
      - name: mygrpc-server
        image: gcr.io/argon-edge-251405/mygrpc-server:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 50051
