k8s/deployment.yaml
# Copyright 2017 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: grpc-server
  namespace: default
spec:
  ports:
  # - port: 80
  #   targetPort: 9000
  #   protocol: TCP
  #   name: esp
  - port: 50051
    targetPort: 50051
    protocol: TCP
    name: grpc
  # - port: 443
  #   targetPort: 8443
  #   protocol: TCP
  #   name: https

  selector:
    app: grpc-server
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-server
  template:
    metadata:
      labels:
        app: grpc-server
    spec:
      serviceAccountName: default
      containers:
      - name: grpc-server
        image: asia-southeast1-docker.pkg.dev/gps-japac-apigeex/docker/grpc-server:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 50051
