k8s/ingress.yaml
# DNS_HOST_PROJECT=tada-host-222711
# INGRESS_STATIC_IP=mygrpc-server-static-ip
# INGRESS_DNS=mygrpc-server.tada.com.au

# gcloud compute addresses create $INGRESS_STATIC_IP --global
# INGRESS_IP=$(gcloud compute addresses describe $INGRESS_STATIC_IP --global --format="value(address)")

# gcloud dns record-sets transaction start --zone="tada-com-au" --project $DNS_HOST_PROJECT
# gcloud dns record-sets transaction add $INGRESS_IP --name=$INGRESS_DNS --ttl="300" --type="A" --zone="tada-com-au"
# gcloud dns record-sets transaction execute --zone="tada-com-au" --project $DNS_HOST_PROJECT


# apiVersion: v1
# kind: Service
# metadata:
#   name: mygrpc-server-nodeport
#   namespace: default
# spec:
#   ports:
#   - port: 8443
#     # name: mygrpc-server-nodeport
#     protocol: TCP
#     targetPort: 8443
#   # - port: 8081
#   #   name: cloud-endpoints
#   #   protocol: TCP
#   #   targetPort: 8081
#   selector:
#     app: mygrpc-server
#   type: NodePort

apiVersion: v1
kind: Service
metadata:
  name: mygrpc-server-nodeport
  annotations: 
    cloud.google.com/app-protocols: '{"mygrpc-tls-port": "HTTP2"}'
spec:
  type: NodePort
  selector: 
    app: mygrpc-server
  ports:
  - name: mygrpc-tls-port
    port: 8443
    targetPort: 8443


#
# networking.gke.io/v1beta2 supports multiple domains (SANs) per certificate, but requires GKE 1.16+ 
#

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mygrpc-server-ingress-tls
  annotations:
    kubernetes.io/ingress.global-static-ip-name: mygrpc-server-static-ip
    networking.gke.io/managed-certificates: mygrpc-server-certificate
spec:
  backend:
    serviceName: mygrpc-server-nodeport
    servicePort: 8443

# ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: epserver-ingress-esp
# spec:
#   backend:
#     serviceName: epserver-nodeport81
#     servicePort: 8081
